2.2.6
 * Add missing newline at end of bin/cqlsh (CASSANDRA-11325)
 * Fix AE in nodetool cfstats (backport CASSANDRA-10859) (CASSANDRA-11297)
 * Unresolved hostname leads to replace being ignored (CASSANDRA-11210)
 * Fix filtering on non-primary key columns for thrift static column families
   (CASSANDRA-6377)
 * Only log yaml config once, at startup (CASSANDRA-11217)
 * Preserve order for preferred SSL cipher suites (CASSANDRA-11164)
 * Reference leak with parallel repairs on the same table (CASSANDRA-11215)
 * Range.compareTo() violates the contract of Comparable (CASSANDRA-11216)
 * Avoid NPE when serializing ErrorMessage with null message (CASSANDRA-11167)
 * Replacing an aggregate with a new version doesn't reset INITCOND (CASSANDRA-10840)
 * (cqlsh) cqlsh cannot be called through symlink (CASSANDRA-11037)
 * fix ohc and java-driver pom dependencies in build.xml (CASSANDRA-10793)
 * Protect from keyspace dropped during repair (CASSANDRA-11065)
 * Handle adding fields to a UDT in SELECT JSON and toJson() (CASSANDRA-11146)
 * Better error message for cleanup (CASSANDRA-10991)
 * cqlsh pg-style-strings broken if line ends with ';' (CASSANDRA-11123)
 * Use cloned TokenMetadata in size estimates to avoid race against membership check
   (CASSANDRA-10736)
 * Always persist upsampled index summaries (CASSANDRA-10512)
 * (cqlsh) Fix inconsistent auto-complete (CASSANDRA-10733)
 * Make SELECT JSON and toJson() threadsafe (CASSANDRA-11048)
 * Fix SELECT on tuple relations for mixed ASC/DESC clustering order (CASSANDRA-7281)
 * (cqlsh) Support utf-8/cp65001 encoding on Windows (CASSANDRA-11030)
 * Fix paging on DISTINCT queries repeats result when first row in partition changes
   (CASSANDRA-10010)
Merged from 2.1:
 * Avoid dropping message too quickly due to missing unit conversion (CASSANDRA-11302)
 * COPY FROM on large datasets: fix progress report and debug performance (CASSANDRA-11053)
 * InvalidateKeys should have a weak ref to key cache (CASSANDRA-11176)